Live preview z-index fix

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -34,6 +34,7 @@ a {
   position: absolute;
   top: 53px;
   width: 100%;
+  z-index: -1;
 }
 
 @font-face {
